[FIX] website_sale: broken CSS on the upsell popup
[IMP] hr_attendance: backend attendance unactivated by default
[FIX] hr_skills: Certifications activity type are for employees only

X-original-commit: b526f2d875444cb400ad0652906a9219b16488f4

--- a/addons/website_sale/static/src/js/product_configurator_dialog/product_configurator_dialog.scss
+++ b/addons/website_sale/static/src/js/product_configurator_dialog/product_configurator_dialog.scss
@@ -1,5 +1,4 @@
 .o_sale_product_configurator_dialog {
-    --modal-border-radius: #{$btn-border-radius};
     --product-configurator-img-size-lg: 6rem;
 
     .modal-header .btn.oi-arrow-left {
